crates/pgls_pretty_print/tests/snapshots/multi/tests__btree_index_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/btree_index_60.sql
snapshot_kind: text
---
CREATE TABLE bt_i4_heap ( seqno INT, random INT );

CREATE TABLE bt_name_heap ( seqno NAME, random INT );

CREATE TABLE bt_txt_heap ( seqno TEXT, random INT );

CREATE TABLE bt_f8_heap (
  seqno DOUBLE PRECISION,
  random INT
);

COPY bt_i4_heap FROM 'filename';

COPY bt_name_heap FROM 'filename';

COPY bt_txt_heap FROM 'filename';

COPY bt_f8_heap FROM 'filename';

ANALYZE bt_i4_heap;

ANALYZE bt_name_heap;

ANALYZE bt_txt_heap;

ANALYZE bt_f8_heap;

CREATE INDEX "bt_i4_index" ON bt_i4_heap USING btree
(
  seqno int4_ops
);

CREATE INDEX "bt_name_index" ON bt_name_heap USING btree
(
  seqno name_ops
);

CREATE INDEX "bt_txt_index" ON bt_txt_heap USING btree
(
  seqno text_ops
);

CREATE INDEX "bt_f8_index" ON bt_f8_heap USING btree
(
  seqno float8_ops
);

SELECT b.* FROM bt_i4_heap AS b WHERE b.seqno < 1;

SELECT b.* FROM bt_i4_heap AS b WHERE b.seqno >= 9999;

SELECT b.* FROM bt_i4_heap AS b WHERE b.seqno = 4500;

SELECT
  b.*
FROM
  bt_name_heap AS b
WHERE
  b.seqno <
  CAST('1' AS NAME);

SELECT
  b.*
FROM
  bt_name_heap AS b
WHERE
  b.seqno >=
  CAST('9999' AS NAME);

SELECT
  b.*
FROM
  bt_name_heap AS b
WHERE
  b.seqno =
  CAST('4500' AS NAME);

SELECT
  b.*
FROM
  bt_txt_heap AS b
WHERE
  b.seqno <
  CAST('1' AS TEXT);

SELECT
  b.*
FROM
  bt_txt_heap AS b
WHERE
  b.seqno >=
  CAST('9999' AS TEXT);

SELECT
  b.*
FROM
  bt_txt_heap AS b
WHERE
  b.seqno =
  CAST('4500' AS TEXT);

SELECT
  b.*
FROM
  bt_f8_heap AS b
WHERE
  b.seqno <
  CAST('1' AS DOUBLE PRECISION);

SELECT
  b.*
FROM
  bt_f8_heap AS b
WHERE
  b.seqno >=
  CAST('9999' AS DOUBLE PRECISION);

SELECT
  b.*
FROM
  bt_f8_heap AS b
WHERE
  b.seqno =
  CAST('4500' AS DOUBLE PRECISION);

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  (proname,
  pronamespace) >
  ('abs',
  0)
ORDER BY proname,
  proargtypes,
  pronamespace
LIMIT 1;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  (proname,
  pronamespace) >
  ('abs',
  0)
ORDER BY proname,
  proargtypes,
  pronamespace
LIMIT 1;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  (proname,
  pronamespace) <
  ('abs',
  1000000)
ORDER BY proname DESC,
  proargtypes DESC,
  pronamespace DESC
LIMIT 1;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  (proname,
  pronamespace) <
  ('abs',
  1000000)
ORDER BY proname DESC,
  proargtypes DESC,
  pronamespace DESC
LIMIT 1;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  (proname,
  proargtypes) >=
  ('abs',
  NULL) AND
  proname <=
  'abs'
ORDER BY proname,
  proargtypes,
  pronamespace;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  (proname,
  proargtypes) >=
  ('abs',
  NULL) AND
  proname <=
  'abs'
ORDER BY proname,
  proargtypes,
  pronamespace;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  proname >=
  'abs' AND
  (proname,
  proargtypes) <
  ('abs',
  NULL)
ORDER BY proname,
  proargtypes,
  pronamespace;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  proname >=
  'abs' AND
  (proname,
  proargtypes) <
  ('abs',
  NULL)
ORDER BY proname,
  proargtypes,
  pronamespace;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  proname >=
  'abs' AND
  (proname,
  proargtypes) <=
  ('abs',
  NULL)
ORDER BY proname DESC,
  proargtypes DESC,
  pronamespace DESC;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  proname >=
  'abs' AND
  (proname,
  proargtypes) <=
  ('abs',
  NULL)
ORDER BY proname DESC,
  proargtypes DESC,
  pronamespace DESC;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  (proname,
  proargtypes) >
  ('abs',
  NULL) AND
  proname <=
  'abs'
ORDER BY proname DESC,
  proargtypes DESC,
  pronamespace DESC;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  (proname,
  proargtypes) >
  ('abs',
  NULL) AND
  proname <=
  'abs'
ORDER BY proname DESC,
  proargtypes DESC,
  pronamespace DESC;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  proname =
  'zzzzzz' AND
  (proname,
  proargtypes) >
  ('abs',
  NULL) AND
  pronamespace IN (1,
  2,
  3) AND
  proargtypes IN ('26 23',
  '5077')
ORDER BY proname,
  proargtypes,
  pronamespace;

SELECT
  proname,
  proargtypes,
  pronamespace
FROM
  pg_proc
WHERE
  proname =
  'zzzzzz' AND
  (proname,
  proargtypes) >
  ('abs',
  NULL) AND
  pronamespace IN (1,
  2,
  3) AND
  proargtypes IN ('26 23',
  '5077')
ORDER BY proname,
  proargtypes,
  pronamespace;

SELECT
  thousand,
  tenthous
FROM
  tenk1
WHERE
  thousand IN (182,
  183) AND
  tenthous >
  7550;

SELECT
  thousand,
  tenthous
FROM
  tenk1
WHERE
  thousand IN (182,
  183) AND
  tenthous >
  7550;

SET enable_seqscan = false;

SET enable_indexscan = true;

SET enable_bitmapscan = false;

SELECT
  hundred,
  twenty
FROM
  tenk1
WHERE
  hundred <
  48
ORDER BY hundred DESC
LIMIT 1;

SELECT
  hundred,
  twenty
FROM
  tenk1
WHERE
  hundred <
  48
ORDER BY hundred DESC
LIMIT 1;

SELECT
  hundred,
  twenty
FROM
  tenk1
WHERE
  hundred <=
  48
ORDER BY hundred DESC
LIMIT 1;

SELECT
  hundred,
  twenty
FROM
  tenk1
WHERE
  hundred <=
  48
ORDER BY hundred DESC
LIMIT 1;

SELECT DISTINCT
  hundred
FROM
  tenk1
WHERE
  hundred IN (47,
  48,
  72,
  82);

SELECT DISTINCT
  hundred
FROM
  tenk1
WHERE
  hundred IN (47,
  48,
  72,
  82);

SELECT DISTINCT
  hundred
FROM
  tenk1
WHERE
  hundred IN (47,
  48,
  72,
  82)
ORDER BY hundred DESC;

SELECT DISTINCT
  hundred
FROM
  tenk1
WHERE
  hundred IN (47,
  48,
  72,
  82)
ORDER BY hundred DESC;

SELECT
  thousand
FROM
  tenk1
WHERE
  thousand IN (364,
  366,
  380) AND
  tenthous =
  200000;

SELECT
  thousand
FROM
  tenk1
WHERE
  thousand IN (364,
  366,
  380) AND
  tenthous =
  200000;

SET enable_seqscan = false;

SET enable_indexscan = true;

SET enable_bitmapscan = false;

SELECT
  proname
FROM
  pg_proc
WHERE
  proname LIKE 'RI\_FKey%del'
ORDER BY 1;

SELECT
  proname
FROM
  pg_proc
WHERE
  proname LIKE 'RI\_FKey%del'
ORDER BY 1;

SELECT
  proname
FROM
  pg_proc
WHERE
  proname ILIKE '00%foo'
ORDER BY 1;

SELECT
  proname
FROM
  pg_proc
WHERE
  proname ILIKE '00%foo'
ORDER BY 1;

SELECT
  proname
FROM
  pg_proc
WHERE
  proname ILIKE 'ri%foo'
ORDER BY 1;

SET enable_indexscan = false;

SET enable_bitmapscan = true;

SELECT
  proname
FROM
  pg_proc
WHERE
  proname LIKE 'RI\_FKey%del'
ORDER BY 1;

SELECT
  proname
FROM
  pg_proc
WHERE
  proname LIKE 'RI\_FKey%del'
ORDER BY 1;

SELECT
  proname
FROM
  pg_proc
WHERE
  proname ILIKE '00%foo'
ORDER BY 1;

SELECT
  proname
FROM
  pg_proc
WHERE
  proname ILIKE '00%foo'
ORDER BY 1;

SELECT
  proname
FROM
  pg_proc
WHERE
  proname ILIKE 'ri%foo'
ORDER BY 1;

RESET enable_seqscan;

RESET enable_indexscan;

RESET enable_bitmapscan;

CREATE TEMPORARY TABLE btree_bpchar ( f1 TEXT COLLATE "C" );

CREATE INDEX ON btree_bpchar USING btree
(
  f1 bpchar_ops
) WITH (deduplicate_items = 'on');

INSERT INTO btree_bpchar
VALUES ('foo'),
('fool'),
('bar'),
('quux');

SELECT * FROM btree_bpchar WHERE f1 LIKE 'foo';

SELECT * FROM btree_bpchar WHERE f1 LIKE 'foo';

SELECT * FROM btree_bpchar WHERE f1 LIKE 'foo%';

SELECT * FROM btree_bpchar WHERE f1 LIKE 'foo%';

SELECT
  *
FROM
  btree_bpchar
WHERE
  CAST(f1 AS CHAR) LIKE 'foo';

SELECT
  *
FROM
  btree_bpchar
WHERE
  CAST(f1 AS CHAR) LIKE 'foo';

SELECT
  *
FROM
  btree_bpchar
WHERE
  CAST(f1 AS CHAR) LIKE 'foo%';

SELECT
  *
FROM
  btree_bpchar
WHERE
  CAST(f1 AS CHAR) LIKE 'foo%';

INSERT INTO btree_bpchar
SELECT
  'foo'
FROM
  generate_series(1,
  1500);

CREATE TABLE dedup_unique_test_table (
  a INT
) WITH (autovacuum_enabled = 'false');

CREATE UNIQUE
INDEX "dedup_unique" ON dedup_unique_test_table USING btree
(
  a
) WITH (deduplicate_items = 'on');

CREATE UNIQUE
INDEX "plain_unique" ON dedup_unique_test_table USING btree
(
  a
) WITH (deduplicate_items = off);

DO $$
BEGIN
    FOR r IN 1..1350 LOOP
        DELETE FROM dedup_unique_test_table;
        INSERT INTO dedup_unique_test_table SELECT 1;
    END LOOP;
END$$;

DROP INDEX "plain_unique";

DELETE FROM dedup_unique_test_table WHERE a = 1;

INSERT INTO dedup_unique_test_table
SELECT
  i
FROM
  generate_series(0,
  450) AS i;

CREATE TABLE btree_tall_tbl ( id INT, t TEXT );

ALTER TABLE btree_tall_tbl ALTER COLUMN t SET STORAGE plain;

CREATE INDEX "btree_tall_idx" ON btree_tall_tbl USING btree
(
  t,
  id
) WITH (fillfactor = 10);

INSERT INTO btree_tall_tbl
SELECT
  g,
  repeat('x',
  250)
FROM
  generate_series(1,
  130) AS g;

INSERT INTO btree_tall_tbl
SELECT
  g,
  NULL
FROM
  generate_series(50,
  60) AS g;

SET enable_seqscan = false;

SET enable_bitmapscan = false;

SELECT id FROM btree_tall_tbl WHERE id = 55 ORDER BY t, id;

SELECT id FROM btree_tall_tbl WHERE id = 55 ORDER BY t, id;

SELECT
  id
FROM
  btree_tall_tbl
WHERE
  id =
  55
ORDER BY t DESC,
  id DESC;

SELECT
  id
FROM
  btree_tall_tbl
WHERE
  id =
  55
ORDER BY t DESC,
  id DESC;

RESET enable_seqscan;

RESET enable_bitmapscan;

CREATE TABLE delete_test_table (
  a BIGINT,
  b BIGINT,
  c BIGINT,
  d BIGINT
);

INSERT INTO delete_test_table
SELECT
  i,
  1,
  2,
  3
FROM
  generate_series(1,
  80000) AS i;

ALTER TABLE delete_test_table ADD PRIMARY KEY (a, b, c, d);

DELETE FROM delete_test_table WHERE a < 79990;

VACUUM delete_test_table;

INSERT INTO delete_test_table
SELECT
  i,
  1,
  2,
  3
FROM
  generate_series(1,
  1000) AS i;

CREATE INDEX ON btree_tall_tbl USING btree
(
  id int4_ops(foo = 1)
);

CREATE TABLE btree_test_expr ( n INT );

CREATE FUNCTION btree_test_func()
RETURNS INT
LANGUAGE "sql"
IMMUTABLE RETURN 0;;

BEGIN;

SET LOCAL min_parallel_table_scan_size = 0;

SET LOCAL max_parallel_maintenance_workers = 4;

CREATE INDEX "btree_test_expr_idx" ON btree_test_expr USING btree
(
  (btree_test_func())
);

COMMIT;

DROP TABLE "btree_test_expr";

DROP FUNCTION btree_test_func();

CREATE INDEX "btree_tall_idx2" ON btree_tall_tbl USING btree
(
  id
);

ALTER INDEX btree_tall_idx2
  ALTER COLUMN id SET (n_distinct = 100);

DROP INDEX "btree_tall_idx2";

CREATE TABLE btree_part ( id INT ) PARTITION BY RANGE(id);

CREATE INDEX "btree_part_idx" ON btree_part USING btree
(
  id
);

ALTER INDEX btree_part_idx
  ALTER COLUMN id SET (n_distinct = 100);

DROP TABLE "btree_part";
