crates/pgls_pretty_print/tests/snapshots/multi/tests__btree_index_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/btree_index.sql
---
create table bt_i4_heap (
  seqno int,
  random int
);

create table bt_name_heap (
  seqno name,
  random int
);

create table bt_txt_heap (
  seqno text,
  random int
);

create table bt_f8_heap (
  seqno double precision,
  random int
);

copy bt_i4_heap from 'filename';

copy bt_name_heap from 'filename';

copy bt_txt_heap from 'filename';

copy bt_f8_heap from 'filename';

analyze bt_i4_heap;

analyze bt_name_heap;

analyze bt_txt_heap;

analyze bt_f8_heap;

create index "bt_i4_index" on bt_i4_heap using btree (seqno int4_ops);

create index "bt_name_index" on bt_name_heap using btree (seqno name_ops);

create index "bt_txt_index" on bt_txt_heap using btree (seqno text_ops);

create index "bt_f8_index" on bt_f8_heap using btree (seqno float8_ops);

select b.* from bt_i4_heap as b where b.seqno < 1;

select b.* from bt_i4_heap as b where b.seqno >= 9999;

select b.* from bt_i4_heap as b where b.seqno = 4500;

select b.* from bt_name_heap as b where b.seqno < cast('1' as name);

select b.* from bt_name_heap as b where b.seqno >= cast('9999' as name);

select b.* from bt_name_heap as b where b.seqno = cast('4500' as name);

select b.* from bt_txt_heap as b where b.seqno < cast('1' as text);

select b.* from bt_txt_heap as b where b.seqno >= cast('9999' as text);

select b.* from bt_txt_heap as b where b.seqno = cast('4500' as text);

select b.* from bt_f8_heap as b where b.seqno < cast('1' as double precision);

select
  b.*
from
  bt_f8_heap as b
where
  b.seqno >=
  cast('9999' as double precision);

select
  b.*
from
  bt_f8_heap as b
where
  b.seqno =
  cast('4500' as double precision);

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  (proname, pronamespace) > ('abs', 0)
order by proname,
  proargtypes,
  pronamespace
limit 1;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  (proname, pronamespace) > ('abs', 0)
order by proname,
  proargtypes,
  pronamespace
limit 1;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  (proname, pronamespace) <
  ('abs', 1000000)
order by proname desc,
  proargtypes desc,
  pronamespace desc
limit 1;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  (proname, pronamespace) <
  ('abs', 1000000)
order by proname desc,
  proargtypes desc,
  pronamespace desc
limit 1;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  (proname, proargtypes) >= ('abs', null) and
  proname <= 'abs'
order by proname,
  proargtypes,
  pronamespace;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  (proname, proargtypes) >= ('abs', null) and
  proname <= 'abs'
order by proname,
  proargtypes,
  pronamespace;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  proname >= 'abs' and
  (proname, proargtypes) < ('abs', null)
order by proname,
  proargtypes,
  pronamespace;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  proname >= 'abs' and
  (proname, proargtypes) < ('abs', null)
order by proname,
  proargtypes,
  pronamespace;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  proname >= 'abs' and
  (proname, proargtypes) <= ('abs', null)
order by proname desc,
  proargtypes desc,
  pronamespace desc;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  proname >= 'abs' and
  (proname, proargtypes) <= ('abs', null)
order by proname desc,
  proargtypes desc,
  pronamespace desc;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  (proname, proargtypes) > ('abs', null) and
  proname <= 'abs'
order by proname desc,
  proargtypes desc,
  pronamespace desc;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  (proname, proargtypes) > ('abs', null) and
  proname <= 'abs'
order by proname desc,
  proargtypes desc,
  pronamespace desc;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  proname = 'zzzzzz' and
  (proname, proargtypes) > ('abs', null) and
  pronamespace in (1, 2, 3) and
  proargtypes in ('26 23', '5077')
order by proname,
  proargtypes,
  pronamespace;

select
  proname,
  proargtypes,
  pronamespace
from
  pg_proc
where
  proname = 'zzzzzz' and
  (proname, proargtypes) > ('abs', null) and
  pronamespace in (1, 2, 3) and
  proargtypes in ('26 23', '5077')
order by proname,
  proargtypes,
  pronamespace;

select
  thousand,
  tenthous
from
  tenk1
where
  thousand in (182, 183) and
  tenthous > 7550;

select
  thousand,
  tenthous
from
  tenk1
where
  thousand in (182, 183) and
  tenthous > 7550;

set enable_seqscan = 'false';

set enable_indexscan = 'true';

set enable_bitmapscan = 'false';

select
  hundred,
  twenty
from
  tenk1
where
  hundred < 48
order by hundred desc
limit 1;

select
  hundred,
  twenty
from
  tenk1
where
  hundred < 48
order by hundred desc
limit 1;

select
  hundred,
  twenty
from
  tenk1
where
  hundred <= 48
order by hundred desc
limit 1;

select
  hundred,
  twenty
from
  tenk1
where
  hundred <= 48
order by hundred desc
limit 1;

select distinct hundred from tenk1 where hundred in (47, 48, 72, 82);

select distinct hundred from tenk1 where hundred in (47, 48, 72, 82);

select distinct
  hundred
from
  tenk1
where
  hundred in (47, 48, 72, 82)
order by hundred desc;

select distinct
  hundred
from
  tenk1
where
  hundred in (47, 48, 72, 82)
order by hundred desc;

select
  thousand
from
  tenk1
where
  thousand in (364, 366, 380) and
  tenthous = 200000;

select
  thousand
from
  tenk1
where
  thousand in (364, 366, 380) and
  tenthous = 200000;

set enable_seqscan = 'false';

set enable_indexscan = 'true';

set enable_bitmapscan = 'false';

select proname from pg_proc where proname like 'RI\_FKey%del' order by 1;

select proname from pg_proc where proname like 'RI\_FKey%del' order by 1;

select proname from pg_proc where proname ilike '00%foo' order by 1;

select proname from pg_proc where proname ilike '00%foo' order by 1;

select proname from pg_proc where proname ilike 'ri%foo' order by 1;

set enable_indexscan = 'false';

set enable_bitmapscan = 'true';

select proname from pg_proc where proname like 'RI\_FKey%del' order by 1;

select proname from pg_proc where proname like 'RI\_FKey%del' order by 1;

select proname from pg_proc where proname ilike '00%foo' order by 1;

select proname from pg_proc where proname ilike '00%foo' order by 1;

select proname from pg_proc where proname ilike 'ri%foo' order by 1;

reset enable_seqscan;

reset enable_indexscan;

reset enable_bitmapscan;

create temporary table btree_bpchar (f1 text collate "C");

create index
on btree_bpchar
using btree
(
  f1 bpchar_ops
)
with (deduplicate_items = 'on');

insert into btree_bpchar values ('foo'), ('fool'), ('bar'), ('quux');

select * from btree_bpchar where f1 like 'foo';

select * from btree_bpchar where f1 like 'foo';

select * from btree_bpchar where f1 like 'foo%';

select * from btree_bpchar where f1 like 'foo%';

select * from btree_bpchar where cast(f1 as bpchar) like 'foo';

select * from btree_bpchar where cast(f1 as bpchar) like 'foo';

select * from btree_bpchar where cast(f1 as bpchar) like 'foo%';

select * from btree_bpchar where cast(f1 as bpchar) like 'foo%';

insert into btree_bpchar select 'foo' from generate_series(1, 1500);

create table dedup_unique_test_table (a int)
with (autovacuum_enabled = 'false');

create unique index "dedup_unique"
on dedup_unique_test_table
using btree
(
  a
)
with (deduplicate_items = 'on');

create unique index "plain_unique"
on dedup_unique_test_table
using btree
(
  a
)
with (deduplicate_items = off);

do
$do$
BEGIN
    FOR r IN 1..1350 LOOP
        DELETE FROM dedup_unique_test_table;
        INSERT INTO dedup_unique_test_table SELECT 1;
    END LOOP;
END
$do$;

drop index plain_unique;

delete from dedup_unique_test_table where a = 1;

insert into dedup_unique_test_table select i from generate_series(0, 450) as i;

create table btree_tall_tbl (
  id int,
  t text
);

alter table btree_tall_tbl
  alter column t set storage plain;

create index "btree_tall_idx"
on btree_tall_tbl
using btree
(
  t,
  id
)
with (fillfactor = 10);

insert into btree_tall_tbl
select
  g,
  repeat('x', 250)
from
  generate_series(1, 130) as g;

insert into btree_tall_tbl select g, null from generate_series(50, 60) as g;

set enable_seqscan = 'false';

set enable_bitmapscan = 'false';

select id from btree_tall_tbl where id = 55 order by t, id;

select id from btree_tall_tbl where id = 55 order by t, id;

select id from btree_tall_tbl where id = 55 order by t desc, id desc;

select id from btree_tall_tbl where id = 55 order by t desc, id desc;

reset enable_seqscan;

reset enable_bitmapscan;

create table delete_test_table (
  a bigint,
  b bigint,
  c bigint,
  d bigint
);

insert into delete_test_table
select
  i,
  1,
  2,
  3
from
  generate_series(1, 80000) as i;

alter table delete_test_table
  add primary key (a, b, c, d);

delete from delete_test_table where a < 79990;

vacuum delete_test_table;

insert into delete_test_table
select
  i,
  1,
  2,
  3
from
  generate_series(1, 1000) as i;

create index on btree_tall_tbl using btree (id int4_ops(foo = 1));

create table btree_test_expr (n int);

create function btree_test_func()
returns int
language sql
immutable return 0;;

begin;

set local min_parallel_table_scan_size = 0;

set local max_parallel_maintenance_workers = 4;

create index "btree_test_expr_idx"
on btree_test_expr
using btree
(
  (btree_test_func())
);

commit;

drop table btree_test_expr;

drop function btree_test_func();

create index "btree_tall_idx2" on btree_tall_tbl using btree (id);

alter index btree_tall_idx2
  alter column id set (n_distinct = 100);

drop index btree_tall_idx2;

create table btree_part (id int)
partition by range(id);

create index "btree_part_idx" on btree_part using btree (id);

alter index btree_part_idx
  alter column id set (n_distinct = 100);

drop table btree_part;
