crates/pgls_pretty_print/tests/snapshots/multi/tests__char_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/char_60.sql
snapshot_kind: text
---
SELECT CAST('c' AS CHAR) = CAST('c' AS CHAR) AS "true";

CREATE TEMPORARY TABLE char_tbl ( f1 CHAR(1) );

INSERT INTO char_tbl (f1) VALUES ('a');

INSERT INTO char_tbl (f1) VALUES ('A');

INSERT INTO char_tbl (f1) VALUES ('1');

INSERT INTO char_tbl (f1) VALUES (2);

INSERT INTO char_tbl (f1) VALUES ('3');

INSERT INTO char_tbl (f1) VALUES ('');

INSERT INTO char_tbl (f1) VALUES ('cd');

INSERT INTO char_tbl (f1) VALUES ('c     ');

SELECT * FROM char_tbl;

SELECT c.* FROM char_tbl AS c WHERE c.f1 <> 'a';

SELECT c.* FROM char_tbl AS c WHERE c.f1 = 'a';

SELECT c.* FROM char_tbl AS c WHERE c.f1 < 'a';

SELECT c.* FROM char_tbl AS c WHERE c.f1 <= 'a';

SELECT c.* FROM char_tbl AS c WHERE c.f1 > 'a';

SELECT c.* FROM char_tbl AS c WHERE c.f1 >= 'a';

DROP TABLE "char_tbl";

INSERT INTO char_tbl (f1) VALUES ('abcde');

SELECT * FROM char_tbl;

SELECT pg_input_is_valid('abcd  ', 'char(4)');

SELECT pg_input_is_valid('abcde', 'char(4)');

SELECT * FROM pg_input_error_info('abcde', 'char(4)');

SELECT CAST('a' AS CHAR);

SELECT CAST('\101' AS CHAR);

SELECT CAST('\377' AS CHAR);

SELECT CAST(CAST('a' AS CHAR) AS TEXT);

SELECT CAST(CAST('\377' AS CHAR) AS TEXT);

SELECT CAST(CAST('\000' AS CHAR) AS TEXT);

SELECT CAST(CAST('a' AS TEXT) AS CHAR);

SELECT CAST(CAST('\377' AS TEXT) AS CHAR);

SELECT CAST(CAST('' AS TEXT) AS CHAR);
